--- a/core/view/tabheads.tmpl
+++ b/core/view/tabheads.tmpl
@@ -1,8 +1,8 @@
-<ul class="tabslist {$class}" id="{$htmlId}">
-{foreach $tabs tab}
-	{include "tabhead.tmpl"}
-{/foreach}
+<ul id="{$name}-tabs" class="tabs {$class}" >
+	{foreach $tabs tab}
+		{include "tabhead.tmpl"}
+	{/foreach}
 </ul>
 <script type="text/javascript">
-Todoyu.Tabs.create('{$htmlId}', {$jsHandler});
+Todoyu.Tabs.create('{$name}', {$jsHandler});
 </script>
