--- a/core/assets/css/headlet-quickcreate.css
+++ b/core/assets/css/headlet-quickcreate.css
@@ -37,14 +37,21 @@
 
 	#headletquickcreate-modes li {
 		height:14px;
-		padding:3px 2px 3px 30px;
+		padding:3px 2px 3px 40px;
 		cursor:pointer;
 		text-align:left;
 		border-bottom:1px solid #ddd;
 	}
 	
-	#headletquickcreate-modes li:hover {
+	#headletquickcreate-modes li.engine:hover {
  	   background-color: #d0d8b3 !important;
+	}
+	
+	#headletquickcreate-modes li.grouplabel {
+		font-size:12px;
+		background-color:#d5dee5;
+		font-weight:bold;
+		padding:4px 2px 4px 6px;
 	}
 
 #headletquickcreate .createmode-default {
