* Added rolemanager and rightseditor in new version

--- a/core/view/form/FormElement_Select_Options.tmpl
+++ b/core/view/form/FormElement_Select_Options.tmpl
@@ -1,4 +1,4 @@
-{if ! $multiple}
+{if !isset($multiple) && !isset($noPleaseSelect)}
 	<option value="0">{Label form.select.pleaseSelect}</option>
 {/if}
 {foreach $options option}
