* User cleanup * Sysmanager icon reorder * Sysmanager role and rights fixes

--- a/core/view/tabhead.tmpl
+++ b/core/view/tabhead.tmpl
@@ -1,4 +1,4 @@
-<li id="{$name}-tab-{$tab.id}" class="item bcg05 tabkey-{$tab.id|default:"0"} {$tab.class} {if $tab.id == $active}active{/if}">
+<li id="{$name}-tab-{$tab.id}" class="item bcg05 tabkey-{$tab.id|default:"0"} {$tab.id} {$tab.class} {if $tab.id == $active}active{/if}">
 	<p id="{$name}-tab-{$tab.id}-label" class="label">
 		<span class="lt"><!-- --></span>
 		<span class="icon"><!-- icon --></span>
