* improved JS inlines order positioning

--- a/core/view/base.tmpl
+++ b/core/view/base.tmpl
@@ -56,7 +56,7 @@
 <script type="text/javascript">
 /*<![CDATA[*/
 {foreach $jsInlines jsInline}
-	{$jsInline}
+	{$jsInline.code}
 {/foreach}
 /*]]>*/
 </script>
