--- a/core/assets/css/headlet-quickcreate.css
+++ b/core/assets/css/headlet-quickcreate.css
@@ -1,30 +1,25 @@
-#headletquickcreate {
-	left:-12px;
-	top:40px;
-	height:30px;
+#headlet-QuickCreate {
+	
 }
 
-#headletquickcreate-mode-btn {
-	float:left;
-	clear:none;
-	width:30px;
-	height:20px;
-	border:1px solid #b2b2b2;
-	border-right:none;
-	background:url('../img/headlet.png') no-repeat 0 0;
-	cursor:pointer;
-}
+	#headlet-QuickCreate .button {
+		width:30px;
+		height:20px;
+		border:1px solid #b2b2b2;
+		border-right:none;
+		background:url(../img/headlet.png) no-repeat 0 0;
+		cursor:pointer;
+	}
+	
+	#headlet-QuickCreate .button .icon {
+		margin-top:2px;
+		margin-left:1px;
+		background:url(../img/headlet-quickcreate.png) no-repeat 2px 0;
+	}
 
-#headletquickcreate-mode-icon {
-	float:left;
-	width:18px;
-	height:18px;
-	margin-top:2px;
-	margin-left:1px;
-	background-color:#f00;
-}
 
-#headletquickcreate-modes {
+
+#headlet-QuickCreate .modes {
 	display:none;
 	position:fixed;
 	left:0px;
@@ -35,7 +30,7 @@
 	z-index:1000;
 }
 
-	#headletquickcreate-modes li {
+	#headlet-QuickCreate .modes li {
 		height:14px;
 		padding:3px 2px 3px 40px;
 		cursor:pointer;
@@ -43,17 +38,14 @@
 		border-bottom:1px solid #ddd;
 	}
 	
-	#headletquickcreate-modes li.engine:hover {
- 	   background-color: #d0d8b3 !important;
+	#headlet-QuickCreate .modes li.engine:hover {
+		   background-color: #d0d8b3 !important;
 	}
 	
-	#headletquickcreate-modes li.grouplabel {
+	#headlet-QuickCreate .modes li.grouplabel {
 		font-size:12px;
 		background-color:#d5dee5;
 		font-weight:bold;
 		padding:4px 2px 4px 6px;
 	}
 
-#headletquickcreate .createmode-default {
-	background:url(../img/headlet-quickcreate.png) no-repeat 2px 0px !important;
-}
