--- a/core/view/toppanel.tmpl
+++ b/core/view/toppanel.tmpl
@@ -1,5 +1,8 @@
 <div id="toppanel">
 	<div id="companyLogo"><!-- company_logo --></div>
+	{$head}
+
+
 	<div id="headletsLeft">
 		{$headletsLeft}
 	</div>
