--- a/core/view/footer.tmpl
+++ b/core/view/footer.tmpl
@@ -4,11 +4,7 @@
 		<div id="footer-info">
 			{Label core.footer.version}: {constant(TODOYU_VERSION)}, {constant(TODOYU_UPDATE)}<br />
 			<a href="http://bugs.todoyu.com/" target="_blank" title="{Label core.footer.bugreport.title}">{Label core.footer.bugreport}</a> |
-			<a href="http://www.todoyu.com/de/community/forum/" target="_blank" title="{Label core.footer.forum.title}">{Label core.footer.forum}</a><br />
-			Documentation:
-			<a href="http://www.todoyu.com/de/forum/userdocumentation/" target="_blank" title="{Label core.footer.usermanual.title}">{Label core.footer.usermanual}</a> |
-			<a href="http://www.todoyu.com/de/forum/api/" target="_blank" title="{Label core.footer.api.title}">{Label core.footer.api}</a> |
-			<a href="http://www.todoyu.com/de/forum/developerdocumentation/" target="_blank" title="{Label core.footer.devmanual.title}">{Label core.footer.devmanual}</a>
+			<a href="http://www.todoyu.com/en/message-board/forum/" target="_blank" title="{Label core.footer.forum.title}">{Label core.footer.forum}</a><br />
 		</div>
 		<div id="footer-logo">
 			<a href="http://www.todoyu.com" target="_blank"><img src="core/assets/img/logo.png" alt="Todoyu" width="85" height="60" border="0" /></a>
