--- a/core/view/footer.tmpl
+++ b/core/view/footer.tmpl
@@ -7,10 +7,10 @@
 			<a href="http://www.todoyu.com/en/message-board/forum/" target="_blank" title="{Label core.footer.forum.title}">{Label core.footer.forum}</a><br />
 		</div>
 		<div id="footer-logo">
-			<a href="http://www.todoyu.com" target="_blank"><img src="core/assets/img/logo.png" alt="Todoyu" width="85" height="60" border="0" /></a>
+			<a href="http://www.todoyu.com" target="_blank" title="todoyu | get tasks done with your team"><img src="core/assets/img/logo.png" alt="todoyu" width="85" height="60" border="0" /></a>
 		</div>
 		<div id="footer-address">
-			<a href="http://www.todoyu.com/" target="_blank">&copy; <strong>todoyu</strong></a> by <a href="http://www.snowflake.ch/" target="_blank">snowflake productions gmbh</a><br />
+			<a href="http://www.todoyu.com/" target="_blank">&copy; <strong>todoyu</strong></a> by <a href="http://www.snowflake.ch/" target="_blank">snowflake productions GmbH</a><br />
 			<a href="mailto:feedback@todoyu.com">feedback@todoyu.com</a><br />
 			<a href="http://www.todoyu.com/" target="_blank">www.todoyu.com</a>
 		</div>
