* kill the zebras! changed some odd/even colors * harmonized lines * little CSS changes

--- a/core/assets/css/form.css
+++ b/core/assets/css/form.css
@@ -252,7 +252,7 @@ input, textarea, select {
 fieldset {}
 
 	fieldset div.odd {
-		background-color:#f3f3f3;
+		background-color:#ffffff;
 	}
 
 	fieldset div.even {}
