* Started to implement headlets in a new way (still in progress, not working) * Added classes to headlets to extend * Added js headlet management (basic) * Cleaned up comments and assets rights behaviour * Fixes and cleanup

--- a/core/view/headlet-ajaxloader.tmpl
+++ b/core/view/headlet-ajaxloader.tmpl
@@ -1,7 +1,3 @@
-{extends "headlet.tmpl"}
+{extends "headlet-type-button.tmpl"}
 
-{block "headlet"}
-	<div id="ajax-loader">
-		<img style="display: none;" alt="{Label core.loading}" src="core/assets/img/ajax-loader.png"/>
-	</div>
-{/block}
+{block "content"}{/block}
