--- a/core/view/noaccess.tmpl
+++ b/core/view/noaccess.tmpl
@@ -74,6 +74,10 @@
 								<td><strong>{Label core.noAccess.missingRight}:</strong></td>
 								<td>{$extKey} / {$right}</td>
 							</tr>
+							<tr>
+							<td><b>TIME</b></td>
+								<td>{date('r')}</td>
+							</tr>
 						</table>
 					</div>
 				</div>
