--- a/core/assets/css/toppanel.css
+++ b/core/assets/css/toppanel.css
@@ -28,36 +28,35 @@
 #headlets {
 	position:absolute;
 	right:0;
+	background-color:#067;
+	padding-bottom:1px;
 }
 
-#headlets > li {
+#headlets li.headlet {
 	float:left;
 	margin-left:1px;
 	height:25px;
 	width:30px;
 }
+
+#headlets li.headlet div.button {
+	width:100%;
+	height:100%;
+	background:url(../img/headlet.png) no-repeat 0 0;
+	cursor:pointer;
+}
+
+
  /* Dev */
-#headlets > li {
+#headlets li.headlet {
 	border:1px solid #F00;
 	margin:0 5px;
 }
 
 
 
-#headletajaxloader {
-	left:20px;
-	top:5px;
-	width:25px;
-	z-index:1011;
-}
 
-#ajax-loader {
-	display:block;
-	width:16px;
-	height:16px;
-	padding:3px;
-}
-
+/*
 #headletmetamenu {
 	left:90px;
 	top:25px;
@@ -83,3 +82,4 @@ ul.metamenu {
 		ul.metamenu li a {
 			float:left;
 		}
+*/
