--- a/core/assets/css/list.css
+++ b/core/assets/css/list.css
@@ -64,9 +64,16 @@ li.even {
 
 
 #extendlisting {
-	margin:8px 0 8px 24px;
+	width:650px;
 }
 
 #extendlisting a {
+	display:block;
 	font-weight:bold;
+	padding:9px 0 9px 20px;
+	background: url(../img/icons.png) no-repeat 5px -289px;
+}
+
+#extendlisting a:hover {
+	background-color:#f2f2d2;
 }
