--- a/core/assets/css/base.css
+++ b/core/assets/css/base.css
@@ -80,10 +80,11 @@ h1 span {
 }
 
 h1, h1 * {
-	font-size:10px;
+	font-size:11px;
 	font-weight:normal;
 	text-transform:uppercase;
 	white-space:nowrap;
+	letter-spacing:0.1em;
 }
 
 h2 {}
