--- a/core/view/pageheader.tmpl
+++ b/core/view/pageheader.tmpl
@@ -14,5 +14,15 @@
 {foreach $additionalHeaderData headerData}
 	{$headerData}
 {/foreach}
+
+<!--[if lte IE 7]>
+	<link rel="stylesheet" media="screen" href="core/assets/css/compatibility/ie.css" />
+<![endif]-->
+
+<!--[if lte IE 7]>
+	<link rel="stylesheet" media="screen" href="core/assets/css/compatibility/ie6.css" />
+<![endif]-->
+
+
 <link rel="shortcut icon" href="favicon.ico" />
 </head>
