--- a/install/view/main.tmpl
+++ b/install/view/main.tmpl
@@ -7,6 +7,7 @@
 	<link href="../core/assets/css/base.css" rel="stylesheet" type="text/css" />
 	<link href="../core/assets/css/layout.css" rel="stylesheet" type="text/css" />
 	<link href="../core/assets/css/panel.css" rel="stylesheet" type="text/css" />
+	<link href="../core/assets/css/form.css" rel="stylesheet" type="text/css" />
 	<link href="../core/assets/css/button.css" rel="stylesheet" type="text/css" />
 	<link href="assets/css/installer.css" rel="stylesheet" type="text/css" />
 	<link rel="shortcut icon" href="../favicon.ico" />
