--- a/core/view/headlet.tmpl
+++ b/core/view/headlet.tmpl
@@ -2,5 +2,5 @@
 	<div id="{$id}-icon" class="icon"><!-- --></div>
 </div>
 <div id="{$id}-content" class="content" style="display:none">
-	{block "content"}{/block}
+	{$content}
 </div>
