* fixed ie8 autocompleter style problem

--- a/core/view/pageheader.tmpl
+++ b/core/view/pageheader.tmpl
@@ -23,6 +23,10 @@
 	<link rel="stylesheet" media="screen" href="core/assets/css/compatibility/ie6.css" />
 <![endif]-->
 
+<!--[if IE 8]>
+	<link rel="stylesheet" media="screen" href="core/assets/css/compatibility/ie8.css" />
+<![endif]-->
+
 
 <link rel="shortcut icon" href="favicon.ico" />
 </head>
