--- a/core/assets/css/headlet-quickcreate.css
+++ b/core/assets/css/headlet-quickcreate.css
@@ -1,15 +1,14 @@
-#headlet-quickcreate {
-	
-}
-	
+
 #headlet-quickcreate .button .icon {
 	background:url(../img/headlet-quickcreate.png) no-repeat 3px 2px;
 }
 
+/*
 #headlet-quickcreate-content {
 	width:140px;
 	margin-left:-110px;
 }
+*/
 
 #headlets ul#headlet-quickcreate-menu li.primary {
 	border-bottom:2px solid #b9bbad;
