--- a/core/view/headlet-quickcreate.tmpl
+++ b/core/view/headlet-quickcreate.tmpl
@@ -1,9 +1,13 @@
-<div id="{$id}-mode-btn" class="button" title="{Label core.quickcreate.title}" >
+<a id="{$id}-mode-btn" title="{Label core.quickcreate.title}" >
 	<div class="icon"></div>
-</div>
+</a>
+
+<!-- <div id="{$id}-mode-btn" class="button" title="{Label core.quickcreate.title}" >
+	<div class="icon"></div>
+</div> -->
 
 <ul id="{$id}-modes" class="modes">
-	
+
 	{foreach $areaCreateModes createMode}
 		<li class="engine primary createmode-{$createMode.type}" ext="{$createMode.ext}" mode="{$createMode.type}">
 			{Label $createMode.labelMode}
@@ -15,5 +19,5 @@
 			{Label $createMode.labelMode}
 		</li>
 	{/foreach}
-	
+
 </ul>
