--- a/core/view/headlet-menu.tmpl
+++ b/core/view/headlet-menu.tmpl
@@ -1,5 +1,5 @@
-<ul id="{$id}-menu">
+<!-- <ul id="{$id}-menu"> -->
 	{foreach $items item}
-		<li id="{$id}-item-{$item.id}" class="item{ucfirst($item.id)} {$item.class}">{Label $item.label}</li>
+		<li><a id="{$id}-item-{$item.id}" class="item{ucfirst($item.id)} {$item.class}">{Label $item.label}</a></li>
 	{/foreach}
-</ul>
+<!-- </ul> -->
