--- a/core/assets/css/form.css
+++ b/core/assets/css/form.css
@@ -206,7 +206,7 @@ div.fElement {
 		.typeDatabaseRelation .foreignRecordsActionControll {
 			display:block;
 		}
-		
+
 		.typeDatabaseRelation button.addForeignRecord .icon {
 			background:url(../img/icons.png) no-repeat 2px -568px;
 		}
@@ -355,6 +355,7 @@ fieldset {}
 		border-width:0 1px 1px 1px;
 		padding:2px 0 2px 3px;
 		cursor:pointer;
+		text-align:left;
 	}
 
 		.acResultContainer li.selected {
