--- a/core/assets/css/headlet-quickcreate.css
+++ b/core/assets/css/headlet-quickcreate.css
@@ -1,3 +1,8 @@
+#headlet-quickcreate-button {
+	background:url(../img/headlet-icons.png) no-repeat 3px 5px;
+}
+
+
 
 #headlet-quickcreate .button .icon {
 	background:url(../img/headlet-quickcreate.png) no-repeat 3px 2px;
