* fixed height resize bug for popups

--- a/core/lib/js/prototype-window/themes/todoyu.css
+++ b/core/lib/js/prototype-window/themes/todoyu.css
@@ -127,6 +127,7 @@
 	font:10px tahoma,arial,sans-serif;
 	background:#f6f8f1;
 	color:#ddd;
+	height: auto !important;
 }
 
 .bottom_draggable,.top_draggable {
