--- a/core/view/button.tmpl
+++ b/core/view/button.tmpl
@@ -1,4 +1,4 @@
-<button{if $type != ''} type="{$type}"{/if} class="button {$class}" id="{$id}" onclick="{$onclick}" {if $title}title="{Label $title}"{/if}>
+<button type="{$type|default:button}" class="button {$class}" id="{$id}" onclick="{$onclick}" title="{if $title}{Label $title}{else}{Label $label}{/if}">
 	<span class="icon"></span>
 	<span class="label">{Label $label}</span>
 	<span class="rgt"></span>
