--- a/core/view/form/FormElement_DatabaseRelation_Record.tmpl
+++ b/core/view/form/FormElement_DatabaseRelation_Record.tmpl
@@ -1,9 +1,9 @@
 <div id="foreignrecord-{$idRecord}-{$fieldname}-{$record._index}" class="databaseRelation">
 	<div id="foreignrecord-{$idRecord}-{$fieldname}-{$record._index}-trigger" onclick="Todoyu.Form.toggleRecordForm({$idRecord}, '{$fieldname}', {$record._index})" class="formtrigger">
-		<span class="label" title="{Label form.icon.edit}">{$record._label}</span>
+		<span class="label" title="{Label form.records.edit}">{$record._label}</span>
 		<span class="additionalStuff">
-			<a href="javascript:void(0)" id="foreignrecord-{$idRecord}-{$fieldname}-{$record._index}-remove" class="icon remove removeForeignRecord remove-{$fieldname}" onclick="Todoyu.Form.removeRecord({$idRecord}, '{$fieldname}', {$record._index})" title="{Label form.icon.remove}">
-				<span class="hidden">{Label form.icon.remove}</span>
+			<a href="javascript:void(0)" id="foreignrecord-{$idRecord}-{$fieldname}-{$record._index}-remove" class="icon remove removeForeignRecord remove-{$fieldname}" onclick="Todoyu.Form.removeRecord({$idRecord}, '{$fieldname}', {$record._index})" title="{Label form.records.remove}">
+				<span class="hidden">{Label form.records.remove}</span>
 			</a>
 		</span>
 	</div>
