* Added htmlencode for calendar fields * Added form validation for subrecords

--- a/core/view/headerLine.tmpl
+++ b/core/view/headerLine.tmpl
@@ -1,4 +1,4 @@
 <h1 class="headerLine {$class}">
-	<span class="title">{$title}</span>
+	<span class="title">{htmlencode $title}</span>
 	<span class="rgt"><!--right--></span>
 </h1>
