* added wordwrapping to event descriptions in calendar views * fixed display of events description (was always title..) * ensured htmlencoding of all possibly textual form element values

--- a/core/view/form/FormElement_SelectGrouped.tmpl
+++ b/core/view/form/FormElement_SelectGrouped.tmpl
@@ -10,7 +10,7 @@
 			<optgroup label="{$label}">
 		{/if}
 		{foreach $group option}
-			<option value="{$option.value}"{if $option.classname != ""} class="{$option.classname}" {/if}{if inArray($option.value, $value)} selected="selected"{/if}{if $option.disabled} disabled="disabled"{/if}>{$option.label}</option>
+			<option value="{htmlencode $option.value}"{if $option.classname != ""} class="{$option.classname}" {/if}{if inArray($option.value, $value)} selected="selected"{/if}{if $option.disabled} disabled="disabled"{/if}>{$option.label}</option>
 		{/foreach}
 		{if $label != "none"}
 			</optgroup>
