--- a/core/view/form/FormElement_Duration.tmpl
+++ b/core/view/form/FormElement_Duration.tmpl
@@ -1,5 +1,5 @@
 {extends "core/view/form/FormElement.tmpl"}
 
 {block name="field"}
-<input type="{$type}" name="{$htmlName}" id="{$htmlId}" value="{$valueTemplate}" class="{$inputClass} {$class}" {if $disabled}disabled="disabled"{/if} {$extraAttributes} /> <div class="durationPickerIcon icon" onclick="Todoyu.Ui.showDurationPicker('{$htmlId}')"></div>
+<input type="{$type}" name="{$htmlName}" id="{$htmlId}" value="{htmlencode $valueTemplate}" class="{$inputClass} {$class}" {if $disabled}disabled="disabled"{/if} {$extraAttributes} /> <div class="durationPickerIcon icon" onclick="Todoyu.Ui.showDurationPicker('{$htmlId}')"></div>
 {/block}
