--- a/core/view/form/FormElement_Textinput.tmpl
+++ b/core/view/form/FormElement_Textinput.tmpl
@@ -1,5 +1,5 @@
 {extends "core/view/form/FormElement.tmpl"}
 
 {block name="field"}
-<input type="{$type}" name="{$htmlName}" id="{$htmlId}" value="{$valueTemplate}" class="{$inputClass} {$class}" {if $disabled}disabled="disabled"{/if} {$extraAttributes} />
+<input type="{$type}" name="{$htmlName}" id="{$htmlId}" value="{htmlencode $valueTemplate}" class="{$inputClass} {$class}" {if $disabled}disabled="disabled"{/if} {$extraAttributes} />
 {/block}
