--- a/core/view/form/FormElement.tmpl
+++ b/core/view/form/FormElement.tmpl
@@ -4,10 +4,18 @@
 		{if $required}<span class="required">*</span>{/if}
 	</div>
 	<div id="formElement-{$htmlId}-inputbox" class="fField{if $wizard.hasWizard} hasWizard{/if}">
+
+		<span class="textBeforeField">{$textBeforeField}</span>
+
 		{block name="field"}
 			This part should be replaced by your field template
 		{/block}
-		{if $error && $errorMessage}<span class="errorMessage">{Label $errorMessage plain=true}</span>{/if}
+
+		<span class="textAfterField">{$textAfterField}</span>
+
+		{if $error && $errorMessage}
+			<span class="errorMessage">{Label $errorMessage plain=true}</span>
+		{/if}
 
 		{if $wizard.hasWizard}
 			<span title="{Label $wizard.wizardConf.title}" class="wizardIcon {$wizard.wizardConf.htmlClass}" onclick="Todoyu.Form.openWizard('{$wizard.wizardConf.idRecord}', '{$htmlId}', '{$wizard.wizardConf.ext}', '{$wizard.wizardConf.controller}', '{$wizard.wizardConf.action}', '{$wizard.wizardConf.height}', '{$wizard.wizardConf.width}', '{Label $wizard.wizardConf.title true}');"></span>
