--- a/core/view/form/FormElement_SelectGrouped.tmpl
+++ b/core/view/form/FormElement_SelectGrouped.tmpl
@@ -2,7 +2,7 @@
 
 {block name="field"}
 <select name="{$htmlName}" id="{$htmlId}" class="{$inputClass} {$class}" size="{$size}" {if $multiple}multiple="multiple"{/if} {if $fieldClass}class="{$fieldClass}"{/if}>
-	{if !$multiple}
+	{if !isset($multiple) && !isset($noPleaseSelect)}
 		<option value="0">{Label form.select.pleaseSelect}</option>
 	{/if}
 	{foreach $options label group}
